# aurelius

./: .gitignore  Activation.cpp  Activation.h  CMakeLists.txt  Dataset.cpp  Dataset.h  DenseLayer.cpp  DenseLayer.h  LICENSE  Loss.cpp  Loss.h  Model.cpp  Model.h  README.md  hello_eigen  hello_eigen.cpp  main.cpp  mnist.cpp  mnistlabels.cpp
include/: Activation.h  Dataset.h  DenseLayer.h  Initializer.h  Logger.h  Loss.h  Model.h  Optimizer.h  RunConfig.h
layers/: layers_ReLU.cpp
neuron/: neuronReLU.cpp  neuronsigmoid.cpp
src/: Activation.cpp  Dataset.cpp  DenseLayer.cpp  Initializer.cpp  Logger.cpp  Loss.cpp  Model.cpp  Optimizer.cpp  main.cpp
